# wterm-sessionizer

./: Cargo.toml  README.md  run.ps1
.fleet/: run.json
src/: cd.rs  dialogue.rs  init.ps1  main.rs  mod.rs  repos.rs
src/dialogue/: dialogue_ui.rs  mod.rs  windows_input.rs
