[package]
name = "wterm-sessionizer"
version = "0.0.12-alpha"
authors = ["Kostiantyn Sharovarskyi <services@sharovarskyi.com>"]
license = "MIT"
description = "Tool to open repos in another folder"
homepage = "https://github.com/kostya9/wterm-sessionizer"
repository = "https://github.com/kostya9/wterm-sessionizer"
keywords = ["cli", "search", "repositories"]
categories = ["command-line-utilities"]
edition="2021"

[[bin]]
name = "wts"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
indicatif = "0.17.3"
path-absolutize = "3.0.14"
shellexpand = "3.1.0"
