[package]
name = "wterm-sessionizer"
version = "0.0.21-alpha"
authors = ["Kostiantyn Sharovarskyi <services@sharovarskyi.com>"]
license = "MIT"
description = "Tool to open repos in another folder"
homepage = "https://github.com/kostya9/wterm-sessionizer"
repository = "https://github.com/kostya9/wterm-sessionizer"
keywords = ["cli", "search", "repositories"]
categories = ["command-line-utilities"]
edition="2021"

[[bin]]
name = "wts"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
ctrlc = "3.4.4"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
encode_unicode = "1.0.0"
fuzzy-matcher = "0.3.7"
indicatif = "0.17.3"
path-absolutize = "3.0.14"
shellexpand = "3.1.0"
windows-sys = { version = "0.52.0", features = ["Win32_UI_Input", "Win32_Foundation", "Win32_System_Console", "Win32_UI_Input_KeyboardAndMouse"] }
